Updates to about page

--- a/ford-weather-app/src/app/about/about.component.html
+++ b/ford-weather-app/src/app/about/about.component.html
@@ -1,3 +1,18 @@
-<p>
-  about works!
-</p>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Sammie Qadri</mat-card-title>
+    <mat-card-subtitle>Dynamic and agile Software Engineer</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
+    <p>
+      I am a recent Computer Science graduate from Wayne State University
+      looking to apply what I have learned in order to help advance the world
+      with automation.
+    </p>
+    <div style="text-align:center">
+      <a href="https://www.linkedin.com/in/hassam-qadri-33234b75/"
+        ><fa-icon [icon]="faLinkedIn" size="lg"></fa-icon
+      ></a>
+    </div>
+  </mat-card-content>
+</mat-card>
