Temps:current, low, and high

--- a/ford-weather-app/src/app/about/about.component.html
+++ b/ford-weather-app/src/app/about/about.component.html
@@ -1,3 +1,6 @@
+<div style="text-align:center">
+  <h1>About Me</h1>
+</div>
 <mat-card>
   <mat-card-header>
     <mat-card-title>Sammie Qadri</mat-card-title>
