--- a/ford-weather-app/src/app/contact/contact.component.html
+++ b/ford-weather-app/src/app/contact/contact.component.html
@@ -1,3 +1,19 @@
-<p>
-  contact works!
-</p>
+<body>
+  <div style="text-align:center">
+    <h1>Contact Me</h1>
+  </div>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Sammie Qadri</mat-card-title>
+      <mat-card-subtitle>sammieqadri@gmail.com</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <p>
+        If you wish to contact me, please feel free to reach out to me at
+        <a href="mailto:sammieqadri@gmail.com">sammieqadri@gmail.com</a>
+        Otherwise, you are welcome to visit my LinkedIn profile that you can
+        access from the about page above.
+      </p>
+    </mat-card-content>
+  </mat-card>
+</body>
