--- a/ford-weather-app/src/app/nav/nav.component.html
+++ b/ford-weather-app/src/app/nav/nav.component.html
@@ -13,7 +13,7 @@
           >
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="/contact">Contact US</a>
+          <a class="nav-link" routerLink="/contact">Contact Me</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" routerLink="/about">About</a>
